# arxiv-research-agent

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.streamlit  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  start.bat
data/: analytics.db  history.db
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AnalyticsPage.jsx  ChatArea.jsx  ChatPanel.jsx  CitationDrawer.jsx  DocumentsPage.jsx  MarkdownText.jsx  MermaidDiagram.jsx  PipelinePanel.jsx  PipelineViz.jsx  Sidebar.jsx
src/: agent.py  analytics_db.py  api.py  arxiv_helper.py  graph.py  history_db.py  ingestion.py  state.py  test_pipeline.py  tools.py  vectorstore.py
