[project]
name = "arxiv-research-agent"
version = "0.1.0"
description = "Agentic RAG system for ArXiv AI/ML research papers"
requires-python = ">=3.11,<3.14"

dependencies = [
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-groq>=0.1.0",
    "langgraph>=0.1.0",
    "pypdf>=4.0.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "streamlit>=1.36.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
]